deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-simple-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-simple-web
  namespace: go-simple-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-simple-web
  template:
    metadata:
      labels:
        app: go-simple-web
    spec:
      containers:
        - name: web
          image: stonejianbu/go-simple-web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: go-simple-web
  namespace: go-simple-web
spec:
  selector:
    app: go-simple-web
  ports:
    - name: go-simple-web
      port: 3000
      targetPort: 3000
